--- a/source/analysis/package.json
+++ b/source/analysis/package.json
@@ -8,7 +8,7 @@
     "version": "0.0.1",
     "private": "true",
     "dependencies": {
-        "aws-sdk": "*",
+        "uuid": "*",
         "request": "*",
         "elasticsearch": "*",
         "http-aws-es": "*",
@@ -16,6 +16,7 @@
         "https": "*"
     },
     "devDependencies": {
+        "aws-sdk": "*",
         "chai": "*",
         "sinon": "*",
         "sinon-chai": "*",
